@@ -2,7 +2,8 @@
 Version 1.1:
     - Refactored code into OO form for dot and line code
     - Refactored code into OO form for pizza plot
-    - pizza plot renamed to pie plot
+    - Pizza plot renamed to Pie plot
     - Refactored code into OO form for gantt chart
     - Allow use of other types of cairo surfaces
+    - Added support for Bar Plots
 
